syntax = "proto3";

option java_package="ds.examples.heatsystem";
option java_multiple_files=true;
option java_outer_classname= "HeatSystemServiceImp";
package heatsystem;

service HeatSystemGreetings{

	rpc sayHello(HeatRequest) returns(HeatReply) {
		}
}

message HeatRequest{
	int32 temp=1;
	int32 number=2;
}
message HeatReply{
	string message=1;
}